# qtflow

./: .gitignore  AI_HANDOFF.md  Cargo.toml  README.md  README.zh-CN.md  RELEASING.md  agent-skill-template.md  architecture.md  cli-contract.md  config-contract.md  design.md  diagnostics-contract.md  prd.md  python-helper-reference.md
.github/workflows/: ci.yml  release.yml
npm/: README.md
npm/qtflow/: README.md  package.json
npm/scripts/: populate-binaries.mjs
scripts/: release.mjs
src/: app.rs  cli.rs  error.rs  lib.rs  main.rs
src/core/: mod.rs  path.rs  plan.rs  project.rs
src/core/config/: merge.rs  mod.rs  model.rs  raw.rs
src/core/detect/: builddir.rs  cmake.rs  ctest.rs  deploy.rs  mod.rs  msvc.rs  ninja.rs  qmake.rs  qt.rs
src/core/diagnostics/: mod.rs  report.rs  rules.rs
src/core/init/: mod.rs
src/core/planners/: build.rs  check.rs  configure.rs  deploy.rs  mod.rs  qmake_build.rs  qmake_check.rs  qmake_configure.rs  qmake_test.rs  test.rs
src/core/runner/: mod.rs  shell.rs
tests/: doctor.rs  help.rs  init.rs  plan.rs  run.rs
